# Raven-Launcher

./: Cargo.toml  ReadMe.md
src/: lib.rs  main.rs
src/api/: mod.rs  response.rs
src/api/actions/: action_list.rs  base_action.rs  constants.rs  copy_to_clipboard.rs  do_nothing.rs  extension_custom_action.rs  hide_window.rs  hide_wndow.rs  launch_app.rs  mod.rs  open.rs  open_url.rs  render_result_list.rs  run_script.rs  set_user_query.rs
src/api/events/: base_event.rs  item_enter.rs  keyword_query.rs  mod.rs  preferences.rs  preferences_update.rs  system_exit.rs
src/api/items/: extension_result_item.rs  mod.rs  result_item.rs
src/api/search/: mod.rs
src/api/search/modes/: base_mode.rs  mod.rs
src/client/: client_handler.rs  extension.rs  extension_client.rs  mod.rs
src/search/: base_search_mode.rs  extension_search_mode.rs  mod.rs  query.rs  search.rs
src/search/app_search_mode/: app.rs  app_db.rs  mod.rs  search_mode.rs  utils.rs
src/server/: deferred_result_renderer.rs  extension.rs  extension_controller.rs  extension_server.rs  extensions.rs  mod.rs
src/server/manifest/: mod.rs  options.rs  preference.rs
src/ui/: launcher_gui.rs  launcher_msg.rs  launcher_window.rs  mod.rs  model.rs
src/ui/items/: result.rs  result_item.glade
src/ui/launcher/: mod.rs  theme.css  ui.glade
src/ui/navigation/: mod.rs  model.rs  nav_msg.rs  navigation_item.rs  results_navigation.rs
src/ui/result_item/: mod.rs  model.rs  msg.rs  result_item_ui.rs
src/ui/utils/: fixed_utils.rs  mod.rs  window_utils.rs
src/ui/utils/window/: mod.rs  (+2 more)
src/ui/windows/: mod.rs
(+4 files in other folders)
