[package]
name = "raven"
version = "0.1.0"
authors = ["Diogo Xavier <diogoxavierpinto@gmail.com>"]

[dependencies]
webbrowser = "0.3.1"
serde = "1.0.78"
serde_json = "1.0.27"
serde_derive = "1.0.78"
serde_traitobject = "0.1.1"
ws = "0.7.8"
lazy_static = "1.1.0"
typed-builder = "0.1.1"
port_scanner = "0.1.5"